# RAG-System-for-Codebase

./: .gitignore  README.md  agent.py  automation_agent.py  desktop_tools.py  filename_index.json  ingest.py  memory.json  memory.py  normalizer.py  planner.py  projects.json  projects.py  pyproject.toml  query.py  record_audio.py  shivi.py  tasks.json  tasks.py  test.py  voice_agent.py  wake_word.py
data/: company_a.txt  company_b.txt  company_c.txt  hello.py  hello.py.bak
db/: chroma.sqlite3
shivi/: automation_agent.py  config.py  core_agent.py  ingest.py  main.py  memory.py  normalizer.py  planner.py  projects.py  query.py  source.py  tasks.py
tests/: test.py
