[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "shivi-agent"
version = "0.1.0"
description = "Terminal AI Assistant"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-ollama",
    "langchain-chroma",
    "langchain-huggingface",
    "langchain-text-splitters",
    "chromadb",
    "sentence-transformers",
    "pypdf"
]

[project.scripts]
shivi = "shivi.main:main"

[tool.setuptools]
packages = ["shivi"]